--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Sources/glfw"]
-	path = Sources/glfw
+[submodule "Sources/glfw3"]
+	path = Sources/glfw3
 	url = https://github.com/glfw/glfw.git
